# packman

./: .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  PKGBUILD  README.md  SECURITY.md  SPEC.md  clippy.toml  install.sh
.cursor/commands/: announce-branch.md  announce-version.md  check-pr.md  copilot-suggestion.md  git-staged-msg.md  issue-new.md  pr-update.md  pr.md  readme-update.md  release-new.md  summary.md  translate.md  wiki-update.md
.github/workflows/: arch-news-watcher.yml  codeql.yml  doc-rust.yml  lint.yml  release.yml  rust.yml  security.yml
Release-docs/: RELEASE_v0.1.0.md  RELEASE_v0.1.1.md  RELEASE_v0.1.4.md
dev/scripts/: aur-push.sh  clippy_cognitive_complexity.sh  complexity_report.sh  release.sh  security-check.sh  update-sha256sums.sh
docs/: plan-systemupdates.md
src/: all_upgradables.rs  lib.rs  main.rs  package_cache.rs  pkg_manager.rs  run_loop.rs
src/pkg_manager/: commands.rs
tests/: other.rs
tests/other/: cyclomatic_complexity.rs  data_flow_complexity.rs
