[package]
name = "packman"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.28"
crossterm = "0.27"
tokio = { version = "1", features = ["process", "rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
thiserror = "1"
chrono = "0.4"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"